@@ -262,6 +262,11 @@ config NSH_DISABLE_LOSETUP
 	default y if DEFAULT_SMALL
 	default n if !DEFAULT_SMALL
 
+config NSH_DISABLE_LOSMART
+	bool "Disable losmart"
+	default y if DEFAULT_SMALL
+	default n if !DEFAULT_SMALL
+
 config NSH_DISABLE_LS
 	bool "Disable ls"
 	default n
