@@ -1471,6 +1471,10 @@
 	  network statistics.  A consequence of this is that you cannot view
 	  this network information if the procfs is not enabled and mounted at
 	  /proc (2015-11-27).
-	* apps/nshlib: Remove all references to internal OS interface
+	* apps/nshlib:  Remove all references to internal OS interface
 	  netdev_foreach().  Logic in ifconfig, ifup, and ifown now use the
 	  procfs file system to examine networking status.  (2015-11-27).
+	* apps/nshlib:  Add a new NSH losmart command.  losmart setups up
+	  a loop device for the smart MTD driver similar to losetup but
+	  with different syntax.  From Ket Petit (2015-11-28).
+
